apd_detector_rust/build_final_error_v4_utf8.txt
**********************************************************************
** Visual Studio 2022 Developer Command Prompt v17.14.28
** Copyright (c) 2025 Microsoft Corporation
**********************************************************************
[vcvarsall.bat] Environment initialized for: 'x64'
cmd :    Compiling 
apd_detector v0.1.0 (C:\Magan
g_Alif\Trial\apd_detector_rus
t)
At line:1 char:1
+ cmd /c "call ""C:\Program 
Files\Microsoft Visual 
Studio\2022\Communit ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~
    + CategoryInfo           
   : NotSpecified: (   Comp  
  iling ap..._detector_rus   
 t):String) [], RemoteExc    
eption
    + FullyQualifiedErrorId  
   : NativeCommandError
 
warning: unused import: 
`std::path::PathBuf`
 --> src\main.rs:2:5
  |
2 | use std::path::PathBuf;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: 
`#[warn(unused_imports)]` 
(part of `#[warn(unused)]`) 
on by default

warning: unused import: 
`IxDyn`
 --> src\detector.rs:4:23
  |
4 | use ndarray::{Array4, 
IxDyn};
  |                       
^^^^^

warning: unused import: 
`std::path::Path`
 --> src\detector.rs:8:5
  |
8 | use std::path::Path;
  |     ^^^^^^^^^^^^^^^

warning: unused imports: 
`CV_32F` and `Size`
 --> src\utils.rs:1:40
  |
1 | use 
opencv::core::{Point, 
Scalar, Mat, Size, CV_32F};
  |                          
              ^^^^  ^^^^^^

error[E0616]: field `inputs` 
of struct `Session` is 
private
  --> src\detector.rs:68:39
   |
68 |         let input_name 
= self.session.inputs[0].name
.clone();
   |                         
              ^^^^^^ private 
field
   |
help: a method `inputs` also 
exists, call it with 
parentheses
   |
68 |         let input_name 
= self.session.inputs()[0].na
me.clone();
   |                         
                    ++

error[E0277]: the trait 
bound 
`SessionInputValue<'_>: From<
ArrayBase<OwnedRepr<f32>, 
Dim<[usize; 4]>>>` is not 
satisfied
  --> src\detector.rs:71:22
   |
71 |         let inputs = 
inputs![input_name => 
input_array]
   |                      ^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^ the trait `From<ArrayBase<
OwnedRepr<f32>, Dim<[usize; 
4]>>>` is not implemented 
for `SessionInputValue<'_>`
   |
help: the following other 
types implement trait 
`From<T>`
  --> C:\Users\Magang\.cargo\
registry\src\index.crates.io-
1949cf8c6b5b557f\ort-2.0.0-rc
.12\src\session\input.rs:24:1
   |
24 | impl<'v, T: 
ValueTypeMarker + ?Sized> 
From<ValueRefMut<'v, T>> for 
SessionInputValue<'v> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^ 
`SessionInputValue<'_>` 
implements 
`From<ValueRefMut<'_, T>>`
...
29 | impl<'v, T: 
ValueTypeMarker + ?Sized> 
From<ValueRef<'v, T>> for 
SessionInputValue<'v> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^ `SessionInputValue<'_>` 
implements 
`From<ValueRef<'_, T>>`
...
34 | impl<T: ValueTypeMarker 
+ ?Sized> From<Value<T>> for 
SessionInputValue<'_> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^ 
`SessionInputValue<'_>` 
implements 
`From<ort::value::Value<T>>`
...
39 | impl<'v, T: 
ValueTypeMarker + ?Sized> 
From<&'v Value<T>> for 
SessionInputValue<'v> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 `SessionInputValue<'_>` 
implements 
`From<&ort::value::Value<T>>`
   = note: this error 
originates in the macro 
`inputs` (in Nightly builds, 
run with -Z macro-backtrace 
for more info)

error[E0599]: no method 
named `map_err` found for 
struct `Vec<(Cow<'_, str>, 
SessionInputValue<'_>)>` in 
the current scope
  --> src\detector.rs:72:14
   |
71 |           let inputs = 
inputs![input_name => 
input_array]
   |  ______________________-
72 | |             
.map_err(|e| 
anyhow::anyhow!("Failed to 
create inputs: {}", e))?;
   | |             -^^^^^^^ 
method not found in 
`Vec<(Cow<'_, str>, 
SessionInputValue<'_>)>`
   | |_____________|
   |

error[E0599]: no method 
named `view` found for tuple 
`(&ort::value::Shape, 
&[f32])` in the current scope
  --> src\detector.rs:90:64
   |
90 |         let mut 
detections = self.parse_detec
tions(output_data.view().into
_dyn(), frame_height, 
frame_width)?;
   |                         
                             
          ^^^^ method not 
found in 
`(&ort::value::Shape, 
&[f32])`

error[E0308]: arguments to 
this function are incorrect
   --> 
src\processor.rs:172:34
    |
172 |             let 
processed_data = 
preprocess_frame(&frame, 
input_h, input_w)?;
    |                        
          ^^^^^^^^^^^^^^^^   
      -------  ------- 
expected `usize`, found `i32`
    |                        
                             
      |
    |                        
                             
      expected `usize`, 
found `i32`
    |
note: function defined here
   --> src\utils.rs:169:8
    |
169 | pub fn 
preprocess_frame(
    |        ^^^^^^^^^^^^^^^^
170 |     frame: &Mat,
171 |     input_height: 
usize,
    |     -------------------
172 |     input_width: usize,
    |     ------------------
help: you can convert an 
`i32` to a `usize` and panic 
if the converted value 
doesn't fit
    |
172 |             let 
processed_data = 
preprocess_frame(&frame, 
input_h.try_into().unwrap(), 
input_w)?;
    |                        
                             
             
++++++++++++++++++++
help: you can convert an 
`i32` to a `usize` and panic 
if the converted value 
doesn't fit
    |
172 |             let 
processed_data = 
preprocess_frame(&frame, 
input_h, input_w.try_into().u
nwrap())?;
    |                        
                             
                      
++++++++++++++++++++

error[E0308]: arguments to 
this function are incorrect
   --> 
src\processor.rs:242:30
    |
242 |         let 
processed_data = 
preprocess_frame(frame, 
input_h, input_w)?;
    |                        
      ^^^^^^^^^^^^^^^^       
 -------  ------- expected 
`usize`, found `i32`
    |                        
                             
 |
    |                        
                             
 expected `usize`, found 
`i32`
    |
note: function defined here
   --> src\utils.rs:169:8
    |
169 | pub fn 
preprocess_frame(
    |        ^^^^^^^^^^^^^^^^
170 |     frame: &Mat,
171 |     input_height: 
usize,
    |     -------------------
172 |     input_width: usize,
    |     ------------------
help: you can convert an 
`i32` to a `usize` and panic 
if the converted value 
doesn't fit
    |
242 |         let 
processed_data = 
preprocess_frame(frame, 
input_h.try_into().unwrap(), 
input_w)?;
    |                        
                             
        ++++++++++++++++++++
help: you can convert an 
`i32` to a `usize` and panic 
if the converted value 
doesn't fit
    |
242 |         let 
processed_data = 
preprocess_frame(frame, 
input_h, input_w.try_into().u
nwrap())?;
    |                        
                             
                 
++++++++++++++++++++

Some errors have detailed 
explanations: E0277, E0308, 
E0599, E0616.
For more information about 
an error, try `rustc 
--explain E0277`.
warning: `apd_detector` (bin 
"apd_detector") generated 4 
warnings
error: could not compile 
`apd_detector` (bin 
"apd_detector") due to 6 
previous errors; 4 warnings 
emitted
